<resources>
    <string name="app_name">Tecneu</string>
    <string name="api_url">https://192.168.100.8:3000/api</string>
    <string name="socketio_url">https://192.168.100.8:3000/socket.io</string>

    <string name="login_username">Nombre de usuario</string>
    <string name="login_password">Contraseña</string>
    <string name="login_login_btn">Ingresar</string>
    <string name="login_forgotten_password">Olvide mi contraseña</string>

    <string name="title_activity_main_screen">Tecneu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Nombre de usuario</string>
    <string name="nav_header_subtitle">micorreo@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_about">Acerca de</string>

    <string name="nav_start">Inicio</string>
    <string name="nav_orders">Pedidos</string>
    <string name="nav_stock">Stock</string>
    <string name="nav_users">Usuarios</string>
    <string name="nav_environment">Ambiente</string>
    <string name="nav_products">Productos</string>
    <string name="nav_providers">Proveedores</string>
    <string name="nav_settings">Ajustes</string>
    <string name="nav_close_session_btn">Cerrar sesión</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="cuser_fragment_create_user">Crear usuario</string>
    <string name="cuser_fragment_standard_user_radio">Estándar</string>
    <string name="cuser_fragment_master_user_radio">Master</string>
    <string name="cuser_fragment_admin_user_radio">Administrador</string>
    <string name="cuser_fragment_permissions">Permisos</string>
    <string name="cuser_fragment_repeat_password">Repita la contraseña</string>
    <string name="cuser_fragment_password">Contraseña</string>
    <string name="cuser_fragment_user_name">Nombre de usuario</string>

    <string name="muser_fragment_modify_user">Modificar usuario</string>

    <string name="ambient_fragment_humidity">Humedad</string>
    <string name="ambient_fragment_temperature">Temperatura</string>
    <string name="ambient_fragment_gas">Gas</string>
    <string name="ambient_fragment_optim_temp">Temperatura óptima</string>
    <string name="ambient_fragment_accept_btn">Aceptar</string>

    <string name="fragment_main_orders_search_orders_btn">Consultar pedidos</string>
    <string name="fragment_main_orders_delete_products_btn">Eliminar productos</string>
    <string name="fragment_main_orders_modify_orders_btn">Modificar pedidos</string>
    <string name="fragment_main_orders_create_orders_btn">Crear pedido</string>

    <string name="view_order_add">Crear</string>
    <string name="view_order_search">Buscar</string>

    <string name="fragment_create_order_search_btn">Buscar</string>
    <string name="fragment_create_order_provider_search">Nombre del provedor</string>
    <string name="fragment_create_order_product_search">Busqueda de producto</string>
    <string name="fragment_create_order_product_quantity">Cantidad</string>
    <string name="fragment_create_order_product_add_btn">Añadir</string>
    <string name="fragment_create_order_product_info">Información del producto</string>
    <string name="fragment_create_order_order_create_btn">Crear pedido</string>
    <string name="action_create_user">Crear usuario</string>
    <string name="cprovider_fragment_provider_name">Nombre</string>
    <string name="cprovider_fragment_company">Compañia</string>
    <string name="cprovider_fragment_email">Email</string>
    <string name="cprovider_fragment_phone">Tel</string>
    <string name="cprovider_fragment_create_provider">Crear proveedor</string>
    <string name="fragment_main_title">Bienvenido a Tecneu</string>
    <string name="fragment_main_description">Tecneu es un sitio de venta de componentes electronicos ubicado en la ciudad de Guadalajara, Jalisco México</string>


    <string name="settings_fragment_title">Opciones</string>
    <string name="settings_fragment_meli">Vincular con mercado libre</string>
    <string name="settings_fragment_changep">Cambiar contraseña</string>
    <string name="fragment_product_title">Titulo: </string>
    <string name="fragment_product_price">precio: </string>
    <string name="fragment_product_available_quantity">cantidad disponible: </string>

    <string name="meli_app_id">4722663666555154</string>
    <string name="meli_redirect_uri">https://localhost:3000/api/meli/redirect</string>
    <string name="cuser_fragment_user_person_name">Nombre de la persona</string>
    <string name="cuser_fragment_user_surname">Apellidos</string>
    <string name="cuser_fragment_edit_access">Modificar accesos</string>
    <string name="cprovider_fragment_modify_provider">Modificar proveedor</string>
</resources>
