<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_start"
            android:title="@string/nav_start" />
        <item
            android:id="@+id/nav_environment"
            android:title="@string/nav_environment" />
        <item
            android:id="@+id/nav_orders"
            android:title="@string/nav_orders" />
        <item
            android:id="@+id/nav_stock"
            android:title="@string/nav_stock" />
        <item
            android:id="@+id/nav_products"
            android:title="@string/nav_products" />
        <item
            android:id="@+id/nav_providers"
            android:title="@string/nav_providers" />
        <item
            android:id="@+id/nav_users"
            android:title="@string/nav_users" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/nav_settings" />
    </group>

</menu>
